# cover_letter_generator

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  companies.yaml  cover_letter_generator.py  pyproject.toml  template.txt
docs/: class_definitions.txt
src/: clg_helpers.py  cover_letter_generator.py
test/: clg_test_fixtures.py  test_clg_helpers.py  test_cover_letter_generator.py
